# whiteout

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  requirements.md
examples/: CMakeLists.txt  ts_full_dump.c  ts_shape_check.c  ts_syntax_check.c
include/whiteout/: whiteout.h
src/: CMakeLists.txt  whiteout.cpp
tests/: CMakeLists.txt  ts_blank_space_corpus.c  whiteout_tests.c
tests/e2e/: as_satisfies.ts  definite_assignment.ts  function_with_types.ts  generic_identity.expected  generic_identity.ts  interface_and_class.ts  nested_generics.ts  optional_param.ts  template_literal.expected  template_literal.ts  type_alias.expected  type_alias.ts
tests/ts-blank-space-corpus/: README.md
tests/ts-blank-space-corpus/cases/: a-works.ts  asi-works.ts  b-works.ts
tests/ts-blank-space-corpus/expected/: a-works.js  asi-works.js  b-works.js
